# Rust-secure-api-key

./: .gitignore  Cargo.toml  README.md
db/: schema.sql
src/: database.rs  errors.rs  lib.rs  main.rs  models.rs  rate_limit.rs  security.rs
tests/: integration_test.rs  rate_limit_test.rs  unit_test.rs
tests/test_db/: rate_limit_manager_test.sqlite  test_api_key_ops.sqlite  test_concurrency.sqlite  test_db_ops.sqlite  test_full_workflow.sqlite  test_token_gen.sqlite  test_token_gen_val.sqlite  test_token_val.sqlite  test_user_ops.sqlite
